--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Dafa Tehnik</title>
+    <title>Bintang Tehnik</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/" />
 
@@ -71,21 +71,27 @@
       <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
           <div>
-            <h3 class="float-md-start mb-3 text-logo"><strong>DAFA TEHNIK</strong></h3>
+            <h3 class="float-md-start mb-0 text-logo">
+              <strong>BINTANG<i class="text-i"> TEHNIK.</i></strong>
+            </h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
               <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
               <a class="nav-link fw-bold py-1 px-0 active" href="#pelayanan">Pelayanan</a>
-              <a class="nav-link fw-bold py-1 px-0 active" href="https://wa.me/+6287866317706">Kontak</a>
+              <a class="nav-link fw-bold py-1 px-0 active" href="https://wa.me/+6282116200102">Kontak</a>
             </nav>
           </div>
         </header>
 
         <main class="px-3">
           <img src="img/1.jpg" alt="" class="mt-5 img-fluid" />
-          <h1 class="mt-3">Mengapa harus memilih Dafa Tehnik ?</h1>
-          <p class="lead mt-3">Dafa Tehnik berpengalaman dalam menangani perawatan dan perbaikan berbagai jenis AC. Sangat tepat jika masalah perawatan dan perbaikan peralatan rumah tangga anda kami yang menangani.</p>
-          <p class="lead mt-5">
-            <a href="https://wa.me/+6287866317706" class="btn btn-lg btn-secondary fw-bold border-success border-2 shadow bg-success text-white">Whatsapp</a>
+          <h1 class="mt-3">Mengapa harus memilih BINTANG TEHNIK ?</h1>
+          <p class="lead">
+            Kami <strong class="deskripsi"><i>BINTANG TEHNIK</i></strong> adalah teknisi profesional dan berpengalaman dalam menangani berbagai masalah kerusakan berbagai jenis ac di rumah ataupun diperusahaan. Dan kami telah menangani
+            pekerjaan di berbagai tempat seluruh wilayah <strong class="fw-bold">Jabodetabek dan sekitarnya</strong> dan kami siap melayani dikota-kota lainnya.
+          </p>
+          <br />
+          <p class="lead">
+            <a href="https://wa.me/+6282116200102" class="btn btn-lg btn-secondary fw-bold border-success border-2 shadow bg-success text-white">Whatsapp</a>
           </p>
         </main>
       </div>
@@ -151,14 +157,13 @@
           <div class="py-5 text-center container-fluid">
             <div class="row py-lg-5">
               <div class="col-lg-6 col-md-8 mx-auto">
-                <h1>Galery Dafa Tehnik</h1>
+                <h1>BINTANG TEHNIK Galery :</h1>
+                <p>BINTANG TEHNIK telah melayani pekerjaan di berbagai tempat seperti : perumahan, perkantoran, gedung bertingkat, pabrik, yayasan, PT, ruko, masjid dll</p>
                 <br />
-                <p>Dafa Tehnik berpengalaman dan telah melayani di berbagai tempat seperti : Perumahan, Perkantoran, Gedung Bertingkat, Yayasan, Masjid, PT, Ruko dll.</p>
+                <p><strong>MELAYANI :</strong></p>
+                <p>Cuci, Isi Freon, Bongkar/Pasang, Service, Jual/Beli ac scond, Frezzer Box, Kulkas, dll</p>
                 <br />
-                <p><strong>Melayani :</strong></p>
-                <p>Perbaikan AC, Bongkar Pasang, Isi Freon, Cuci, Jual/Beli AC Second, dll</p>
-                <br />
-                <h1>Harga IDR 70K</h1>
+                <h1>Harga IDR 70,000</h1>
               </div>
             </div>
           </div>
@@ -276,7 +281,7 @@
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img src="img/9.jpeg" alt="" height="400" />
+                  <img src="img/9.jpg" alt="" height="400" />
                   <!-- <div class="card-body">
                     <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure suscipit temporibus iste tempora exercitationem.</p>
                     <div class="d-flex justify-content-between align-items-center">
@@ -291,7 +296,7 @@
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img src="img/10.jpeg" alt="" height="400" />
+                  <img src="img/10.jpg" alt="" height="400" />
                   <!-- <div class="card-body">
                     <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure suscipit temporibus iste tempora exercitationem.</p>
                     <div class="d-flex justify-content-between align-items-center">
@@ -312,16 +317,17 @@
       <!-- contact -->
       <section id="contact" class="contact mt-5">
         <div class="container-contact">
-          <h3 class="mb-3">Alamat :</h3>
-          <p>Jl. Kp. Gedong No.10 Rt.001 Rw.04</p>
-          <p>Kemiri Muka, Beji Depok</p>
-          <p>Telpon : <a href="https://wa.me/+6287866317706" style="text-decoration: none">0878 6631 7706</a></p>
+          <h3>Alamat :</h3>
+          <br />
+          <p>Jl. Inpres 18 No. 55 Rt.006 Rw.08</p>
+          <p>Larangan Selatan, Ciledug Tangerang</p>
+          <p>Telpon : <a href="https://wa.me/+6282116200102" class="text-decoration-none">0821 1620 0102</a>, <a href="https://wa.me/+62895391492910" class="text-decoration-none">0895 3914 92910</a></p>
         </div>
 
         <div class="container-map mt-5">
           <div class="map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.1460691406924!2d106.83471287444289!3d-6.375136862359428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ec0c101f3e67%3A0xd0fdbc08d96bb01!2sJl.%20Kp.%20Gedong%2C%20Kemiri%20Muka%2C%20Kecamatan%20Beji%2C%20Kota%20Depok%2C%20Jawa%20Barat%2016424!5e0!3m2!1sid!2sid!4v1703420329202!5m2!1sid!2sid"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d701.1196284046131!2d106.72199968938097!3d-6.246389983000552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69fa760bd80817%3A0xfb440076e07cb9a3!2sJl.%20Inpres%2018%20No.14%2C%20RT.004%2FRW.007%2C%20Larangan%20Sel.%2C%20Kec.%20Larangan%2C%20Kota%20Tangerang%2C%20Banten%2015154!5e0!3m2!1sid!2sid!4v1703769640877!5m2!1sid!2sid"
               width="600"
               height="450"
               style="border: 0"
@@ -337,7 +343,7 @@
       <footer class="text-muted py-5">
         <div class="container">
           <p>
-            Dibuat oleh : <strong><i>Dafa Tehnik</i></strong> | &copy; 2023
+            Dibuat oleh : <strong><i>Bintang Tehnik</i></strong> | &copy; 2023
           </p>
           <p>
             <a href="#">Back to top</a>
